# core/src/main/java/com/lantanagroup/link/EventTypes.java
@@ -10,6 +10,7 @@ public enum EventTypes {
   BeforePatientDataQuery,
   AfterPatientResourceQuery,
   AfterPatientDataQuery,
+  AfterApplyConceptMaps,
   BeforePatientDataStore,
   AfterPatientDataStore,
   BeforeMeasureEval,
